--- a/libraryprojects/libraryprojects-tests/pom.xml
+++ b/libraryprojects/libraryprojects-tests/pom.xml
@@ -14,13 +14,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.google.android</groupId>
+            <groupId>android</groupId>
             <artifactId>android</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.android</groupId>
-            <artifactId>android-test</artifactId>
             <scope>provided</scope>
         </dependency>
 
