--- a/libraryprojects/pom.xml
+++ b/libraryprojects/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <android.version>3.2_r1</android.version>
     </properties>
 
     <dependencyManagement>
@@ -27,14 +28,9 @@
                 <version>4.8.1</version>
             </dependency>
             <dependency>
-                <groupId>com.google.android</groupId>
+                <groupId>android</groupId>
                 <artifactId>android</artifactId>
-                <version>2.3.3</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.android</groupId>
-                <artifactId>android-test</artifactId>
-                <version>2.3.3</version>
+                <version>${android.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -48,7 +44,7 @@
                     <version>3.0.1-SNAPSHOT</version>
                     <configuration>
                         <sdk>
-                            <platform>10</platform>
+                            <platform>13</platform>
                         </sdk>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
                     </configuration>
