Add ActionBarSherlock lib to see if it actually works...
The combination of apklib & integration tests seems to have been
failing for some people (including myself):

https://groups.google.com/d/topic/actionbarsherlock/i6fGbZn-m_M/discussion

However, adding ABS apklib to the sample library project here works
perfectly - the ActionBar gets added, the integration tests run,
everything is just peachy, running against a Gingerbread device.

Not sure where the difference lies...

--- a/libraryprojects/libraryprojects-mainapp/pom.xml
+++ b/libraryprojects/libraryprojects-mainapp/pom.xml
@@ -11,14 +11,24 @@
     <artifactId>libraryprojects-mainapp</artifactId>
     <packaging>apk</packaging>
     <name>Library Projects - Main App</name>
-
+    <repositories>
+        <repository>
+            <id>jakewharton</id>
+            <url>http://r.jakewharton.com/maven/release/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
-            <groupId>com.google.android</groupId>
+            <groupId>android</groupId>
             <artifactId>android</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.actionbarsherlock</groupId>
+            <artifactId>library</artifactId>
+            <version>3.4.2</version>
+            <type>apklib</type>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
