--- a/libraryprojects/libraryprojects-mainapp/AndroidManifest.xml
+++ b/libraryprojects/libraryprojects-mainapp/AndroidManifest.xml
@@ -3,7 +3,9 @@
       package="com.jayway.maven.plugins.android.generation2.samples.libraryprojects.mainapp"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/icon">
+    <application android:label="@string/app_name"
+                 android:theme="@style/Theme.Sherlock"
+                 android:icon="@drawable/icon">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
